# experiment_code

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
configs/: data.yaml  distill.yaml  grow.yaml  student.yaml  teacher.yaml  train.yaml
scripts/: eval_teacher.py  train_baseline.py  train_distill.py  train_distill_grow.py  train_grow.py
src/distill_nli/: __init__.py
src/distill_nli/data/: mnli.py
src/distill_nli/distillation/: losses.py  trainer.py
src/distill_nli/growing/: __init__.py  _math.py  attention.py  ffn.py  schedule.py  tiny.py
src/distill_nli/models/: growing.py  student.py  teacher.py
src/distill_nli/training/: loop.py
src/distill_nli/utils/: config.py  logging.py  metrics.py  seed.py
tests/: conftest.py  test_data.py  test_distill_loss.py  test_grow_schedule.py  test_growing_attention.py  test_growing_combined.py  test_growing_ffn.py  test_growing_wrap.py
